@@ -81,6 +81,9 @@ OmegaT-Plugin: filter
 Name: org.omegat.filters3.xml.infix.InfixFilter
 OmegaT-Plugin: filter
 
+Name: org.omegat.filters3.xml.flash.FlashFilter
+OmegaT-Plugin: filter
+
 Name: org.omegat.core.matching.Tokenizer
 OmegaT-Plugin: tokenizer
 
