@@ -73,6 +73,7 @@ OmegaT supports the following file formats out of the box:
   - DokuWiki
   - Wix  
   - Infix
+  - Flash XML export
 
 OmegaT can be customized to support other file formats as well.
 
